tests/ui/hygiene/cross-crate-name-hiding-2.stderr
error[E0422]: cannot find struct, variant or union type `MyStruct` in this scope
  --> $DIR/cross-crate-name-hiding-2.rs:13:13
   |
LL | my_struct!(define);
   | ------------------ you might have meant to refer to this struct
...
LL |     let x = MyStruct {};
   |             ^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0422`.
